[project]
name = "comfyui-ic-light-video"
description = "ComfyUI native nodes for IC-Light"
version = "1.0.5"
license = { text = "Apache License 2.0" }
dependencies = ["opencv-python"]

[project.urls]
Repository = "https://github.com/Polygoningenieur/ComfyUI-IC-Light-Video"

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-IC-Light-Video"
Icon = ""
