[project]
name = "comfyui-ic-light-video"
description = "ComfyUI native nodes for IC-Light with a Video node"
version = "0.0.9"
license = { text = "Apache License 2.0" }
dependencies = ["opencv-python"]

[project.urls]
Repository = "https://github.com/Polygoningenieur/ComfyUI-IC-Light-Video"

[tool.comfy]
PublisherId = "polygoningenieur"
DisplayName = "ComfyUI-IC-Light-Video"
Icon = ""
